# syzygy-mipi-firmware

./: CMakeLists.txt  README.md
i2c_pio/: CMakeLists.txt  pio_i2c.c
i2c_pio/include/: i2c.pio.h  pio_i2c.h
i2c_slave/: CMakeLists.txt
i2c_slave_multi/: CMakeLists.txt  i2c_multi.c  i2c_multi.pio
i2c_slave_multi/include/: i2c_multi.h
src/: CMakeLists.txt  clock_programmer.c  clock_programmer.h  configs.c  configs.h  dna_blob.c  dna_blob.h  downstream_i2cs.c  downstream_i2cs.h  gpio_expander.c  gpio_expander.h  host_slave_i2cs.c  host_slave_i2cs.h  i2c_muxer.c  i2c_muxer.h  mirror_gpio.pio  syzygy_dna.c  syzygy_dna.h  syzygy_mipi.c  syzygy_mipi.h
